<resources>
    <string name="app_name">AlmostThere</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    
    <string name="begin_carpooling">Begin Carpooling</string>
    <string name="title_activity_intro_email">Intro_email</string>
    <string name="instruction">To get started, enter your university email. We will send you a verification code that you will need to enter in this app.</string>
    <string name="goButton">GO</string>
    <string name="title_activity_intro__code">Intro_Code</string>
    <string name="enterCodeTitle">Enter your code here</string>
    <string name="intro">Great! We\'ve sent your code to</string>
    <string name="emailAddress">emailAddress</string>
    <string name="codeButton">GO</string>
    <string name="title_activity_intro_user_info">Intro_userInfo</string>
    <string name="goButtonCode">GO</string>
    <string name="name">your name:</string>
    <string name="nameTitle">your name:</string>
    <string name="userName">username</string>
    <string name="pswdTitle">password</string>
    <string name="userButton">OK, TAKE ME TO CARPOOOOOL</string>
    <string name="logIn">LOG IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_current_carpools">Current Carpools</string>
    <string name="title_activity_my_carpools">My Carpools</string>
    <string name="ab_logout">logout_menu</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add_carpool">Create New Carpool</string>
    <string name="title_activity_join_carpool">Join Carpool</string>

    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;</string>

</resources>
