<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dreamcoders.almostthere.Intro.Intro_Code">

    <TextView android:text="@string/emailAddress" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showCode"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enterCodeTitle"
        android:id="@+id/title_enterCode"
        android:linksClickable="false"
        android:textSize="35sp"
        android:layout_below="@+id/showCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/intro"
        android:id="@+id/intro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/enterCode"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/title_enterCode"
        android:layout_centerHorizontal="true"
        android:width="250dp"
        android:background="#b689fbe1"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goButton"
        android:layout_marginTop="34dp"
        android:width="250dp"
        android:textSize="30sp"
        android:layout_below="@+id/enterCode"
        android:layout_alignLeft="@+id/enterCode"
        android:layout_alignStart="@+id/enterCode"
        android:text="@string/goButtonCode"
        android:onClick="onClick" />

</RelativeLayout>
